[tool.poetry]
name = "milestone_2"
version = "0.1.0"
description = ""
authors = ["Edward Boulderstone <Edward.Boulderstone@Bjss.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
